dark mode view for search bar, setting higher font size for form to prevent zooming in on focus

--- a/client/suspense-twitter-client/src/App.css
+++ b/client/suspense-twitter-client/src/App.css
@@ -776,6 +776,10 @@
 }
 
 @media only screen and (max-width: 600px) {
+    body {
+        overflow-x: hidden;
+    }
+
     .App {
         flex-direction: column-reverse;
         align-items: center;
@@ -803,6 +807,14 @@
         padding: 8px 0;
         /* column-gap: 10px; */
         justify-content: space-between;
+        background-color: rgba(255, 255, 255, 0.9);
+        backdrop-filter: blur(3px);
+        transition: cubic-bezier(0.075, 0.82, 0.165, 1);
+        transition-duration: 1s;
+    }
+
+    #sidebar-column-right-dark-mobile {
+        background-color: rgba(21, 32, 43, 0.9);
     }
 
     .tweet-body {
@@ -835,7 +847,7 @@
         /* width: 250px; */
         width: 228px;
         height: 28px;
-        font-size: 13px;
+        font-size: 16px;
         border-radius: 30px;
     }
 }
